Fixed text overflow issue

--- a/css/elements.css
+++ b/css/elements.css
@@ -26,6 +26,17 @@
     outline: 2px solid #0c8ce9;
 }
 
+
+
+.canvas-element .element-content {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    word-wrap: break-word;
+    word-break: break-word;
+    box-sizing: border-box;
+}
+
 .handle, .rotation-handle {
     height: 0.6rem;
     width: 0.6rem;
